idiomas de los botones

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -1,47 +1,47 @@
 {
-  "app_title": "Gestión del Padrón Municipal",
-  "app_subtitle": "Guía interactiva para tu empadronamiento",
-  "loading_app": "Cargando la aplicación del Padrón...",
-  "loading_fallback_message": "Si tarda, recargue la página.",
-  "summary_title": "Resumen para Empadronamiento",
-  "summary_address_label": "Dirección:",
-  "summary_address_save_button": "Guardar",
-  "summary_address_cancel_button": "Cancelar",
-  "summary_people_label": "Personas a empadronar (extraídas de documentos de identidad validados):",
-  "summary_no_people_extracted": "No se han extraído personas de los documentos validados aún.",
-  "summary_disclaimer": "Esta información es un resumen. Deberá presentar la documentación original en el Ayuntamiento para formalizar el trámite.",
-  "question_text": "Pregunta",
-  "docs_required_title": "Documentación Requeria",
-  "file_status_valid": "Validado",
-  "file_status_invalid": "Inválido",
-  "file_status_pending": "Pendiente",
-  "file_status_uploading": "Subiendo...",
-  "file_validation_button": "Validar",
-  "file_validation_loading_button": "Validando...",
-  "file_remove_button": "Eliminar archivo",
-  "file_validation_reason": "Causa:",
-  "file_extracted_data": "Extraído:",
-  "file_read_error": "Error al leer el archivo.",
-  "ai_response_error": "No se pudo obtener una respuesta de la IA (estructura inesperada).",
-  "ai_connection_error": "Error de conexión o procesamiento con la IA:",
-  "continue_button": "Continuar",
-  "back_button": "Atrás",
-  "final_docs_review_title": "Documentación General Recopilada",
-  "final_docs_no_docs_requested": "No se han solicitado documentos en los pasos previos.",
-  "final_docs_continue_button": "Pasar a la pantalla final de resumen",
-  "alert_all_required_docs_needed": "Por favor, suba y valide todos los documentos obligatorios.",
-  "user_id_label": "ID de Usuario:",
-  "confirm_no_validation_title": "Confirmación de Continuar sin Validación",
-  "confirm_no_validation_message": "Estás seguro que quieres continuar sin toda la documentación requerida, esto puede dar lugar al rechazo del alta por falta de documentación.",
-  "confirm_no_validation_yes_button": "Sí, continuar",
-  "confirm_no_validation_no_button": "No, volver",
-  "continue_without_validation_button": "Continuar sin validar",
-  "final_document_review_instructions": "Este es el resumen de la documentación que ha sido solicitada y validada para su trámite de empadronamiento. Por favor, adjunte y valide los documentos requeridos. Asegúrese de que todos los documentos obligatorios estén validados. Una vez que todo esté listo, podrá pasar a la pantalla final de resumen.",
-  "send_all_button": "Enviar todo",
-  "send_success_message": "Datos enviados correctamente. Su trámite ha sido registrado.",
-  "send_error_message": "Error al enviar los datos. Por favor, inténtelo de nuevo.",
-  "sending_data": "Enviando datos...",
-  "breadcrumb_home": "Inicio",
-  "file_not_found_for_validation": "Archivo no encontrado para validación.",
-  "language_selection_title": "Seleccione su Idioma"
+  "app_title": "إدارة السجل البلدي",
+  "app_subtitle": "دليل تفاعلي لتسجيلك",
+  "loading_app": "جاري تحميل تطبيق السجل...",
+  "loading_fallback_message": "إذا استغرق الأمر وقتًا طويلاً، يرجى إعادة تحميل الصفحة.",
+  "summary_title": "ملخص للتسجيل",
+  "summary_address_label": "العنوان:",
+  "summary_address_save_button": "حفظ",
+  "summary_address_cancel_button": "إلغاء",
+  "summary_people_label": "الأشخاص المراد تسجيلهم (المستخرجون من وثائق الهوية التي تم التحقق منها):",
+  "summary_no_people_extracted": "لم يتم استخراج أي أشخاص من الوثائق التي تم التحقق منها بعد.",
+  "summary_disclaimer": "هذه المعلومات هي ملخص. يجب تقديم الوثائق الأصلية في قاعة المدينة لإتمام الإجراء.",
+  "question_text": "سؤال",
+  "docs_required_title": "الوثائق المطلوبة",
+  "file_status_valid": "تم التحقق منه",
+  "file_status_invalid": "غير صالح",
+  "file_status_pending": "قيد الانتظار",
+  "file_status_uploading": "جاري الرفع...",
+  "file_validation_button": "تحقق",
+  "file_validation_loading_button": "جاري التحقق...",
+  "file_remove_button": "حذف الملف",
+  "file_validation_reason": "السبب:",
+  "file_extracted_data": "المستخرج:",
+  "file_read_error": "خطأ في قراءة الملف.",
+  "ai_response_error": "تعذر الحصول على رد من الذكاء الاصطناعي (بنية غير متوقعة).",
+  "ai_connection_error": "خطأ في الاتصال أو المعالجة مع الذكاء الاصطناعي:",
+  "continue_button": "متابعة",
+  "back_button": "رجوع",
+  "final_docs_review_title": "الوثائق العامة التي تم جمعها",
+  "final_docs_no_docs_requested": "لم يتم طلب أي وثائق في الخطوات السابقة.",
+  "final_docs_continue_button": "الانتقال إلى شاشة الملخص النهائية",
+  "alert_all_required_docs_needed": "يرجى رفع والتحقق من جميع الوثائق المطلوبة.",
+  "user_id_label": "معرف المستخدم:",
+  "confirm_no_validation_title": "تأكيد المتابعة بدون التحقق",
+  "confirm_no_validation_message": "هل أنت متأكد أنك تريد المتابعة بدون جميع الوثائق المطلوبة، هذا قد يؤدي إلى رفض التسجيل بسبب نقص الوثائق.",
+  "confirm_no_validation_yes_button": "نعم، متابعة",
+  "confirm_no_validation_no_button": "لا، عودة",
+  "continue_without_validation_button": "متابعة بدون تحقق",
+  "final_document_review_instructions": "هذا هو ملخص الوثائق التي تم طلبها والتحقق منها لإجراء تسجيلك. يرجى إرفاق والتحقق من الوثائق المطلوبة. تأكد من أن جميع الوثائق الإلزامية قد تم التحقق منها. بمجرد أن يصبح كل شيء جاهزًا، يمكنك الانتقال إلى شاشة الملخص النهائية.",
+  "send_all_button": "إرسال الكل",
+  "send_success_message": "تم إرسال البيانات بنجاح. تم تسجيل طلبك.",
+  "send_error_message": "خطأ في إرسال البيانات. يرجى المحاولة مرة أخرى.",
+  "sending_data": "جاري إرسال البيانات...",
+  "breadcrumb_home": "الرئيسية",
+  "file_not_found_for_validation": "لم يتم العثور على الملف للتحقق منه.",
+  "language_selection_title": "اختر لغتك"
 }
