--- a/src/locales/ca.json
+++ b/src/locales/ca.json
@@ -1,47 +1,47 @@
 {
-  "app_title": "Gestión del Padrón Municipal",
-  "app_subtitle": "Guía interactiva para tu empadronamiento",
-  "loading_app": "Cargando la aplicación del Padrón...",
-  "loading_fallback_message": "Si tarda, recargue la página.",
-  "summary_title": "Resumen para Empadronamiento",
-  "summary_address_label": "Dirección:",
-  "summary_address_save_button": "Guardar",
-  "summary_address_cancel_button": "Cancelar",
-  "summary_people_label": "Personas a empadronar (extraídas de documentos de identidad validados):",
-  "summary_no_people_extracted": "No se han extraído personas de los documentos validados aún.",
-  "summary_disclaimer": "Esta información es un resumen. Deberá presentar la documentación original en el Ayuntamiento para formalizar el trámite.",
+  "app_title": "Gestió del Padró Municipal",
+  "app_subtitle": "Guia interactiva per al teu empadronament",
+  "loading_app": "Carregant l'aplicació del Padró...",
+  "loading_fallback_message": "Si triga, recarregueu la pàgina.",
+  "summary_title": "Resum per a Empadronament",
+  "summary_address_label": "Adreça:",
+  "summary_address_save_button": "Desar",
+  "summary_address_cancel_button": "Cancel·lar",
+  "summary_people_label": "Persones a empadronar (extretes de documents d'identitat validats):",
+  "summary_no_people_extracted": "No s'han extret persones dels documents validats encara.",
+  "summary_disclaimer": "Aquesta informació és un resum. Haureu de presentar la documentació original a l'Ajuntament per formalitzar el tràmit.",
   "question_text": "Pregunta",
-  "docs_required_title": "Documentación Requeria",
-  "file_status_valid": "Validado",
-  "file_status_invalid": "Inválido",
-  "file_status_pending": "Pendiente",
-  "file_status_uploading": "Subiendo...",
+  "docs_required_title": "Documentació Requerida",
+  "file_status_valid": "Validat",
+  "file_status_invalid": "Invàlid",
+  "file_status_pending": "Pendent",
+  "file_status_uploading": "Pujant...",
   "file_validation_button": "Validar",
-  "file_validation_loading_button": "Validando...",
-  "file_remove_button": "Eliminar archivo",
+  "file_validation_loading_button": "Validant...",
+  "file_remove_button": "Eliminar arxiu",
   "file_validation_reason": "Causa:",
-  "file_extracted_data": "Extraído:",
-  "file_read_error": "Error al leer el archivo.",
-  "ai_response_error": "No se pudo obtener una respuesta de la IA (estructura inesperada).",
-  "ai_connection_error": "Error de conexión o procesamiento con la IA:",
+  "file_extracted_data": "Extret:",
+  "file_read_error": "Error al llegir l'arxiu.",
+  "ai_response_error": "No s'ha pogut obtenir una resposta de la IA (estructura inesperada).",
+  "ai_connection_error": "Error de connexió o processament amb la IA:",
   "continue_button": "Continuar",
-  "back_button": "Atrás",
-  "final_docs_review_title": "Documentación General Recopilada",
-  "final_docs_no_docs_requested": "No se han solicitado documentos en los pasos previos.",
-  "final_docs_continue_button": "Pasar a la pantalla final de resumen",
-  "alert_all_required_docs_needed": "Por favor, suba y valide todos los documentos obligatorios.",
-  "user_id_label": "ID de Usuario:",
-  "confirm_no_validation_title": "Confirmación de Continuar sin Validación",
-  "confirm_no_validation_message": "Estás seguro que quieres continuar sin toda la documentación requerida, esto puede dar lugar al rechazo del alta por falta de documentación.",
+  "back_button": "Enrere",
+  "final_docs_review_title": "Documentació General Recopilada",
+  "final_docs_no_docs_requested": "No s'han sol·licitat documents en els passos previs.",
+  "final_docs_continue_button": "Passar a la pantalla final de resum",
+  "alert_all_required_docs_needed": "Si us plau, pugi i validi tots els documents obligatoris.",
+  "user_id_label": "ID d'Usuari:",
+  "confirm_no_validation_title": "Confirmació de Continuar sense Validació",
+  "confirm_no_validation_message": "Estàs segur que vols continuar sense tota la documentació requerida, això pot resultar en el rebuig de l'alta per falta de documentació.",
   "confirm_no_validation_yes_button": "Sí, continuar",
-  "confirm_no_validation_no_button": "No, volver",
-  "continue_without_validation_button": "Continuar sin validar",
-  "final_document_review_instructions": "Este es el resumen de la documentación que ha sido solicitada y validada para su trámite de empadronamiento. Por favor, adjunte y valide los documentos requeridos. Asegúrese de que todos los documentos obligatorios estén validados. Una vez que todo esté listo, podrá pasar a la pantalla final de resumen.",
-  "send_all_button": "Enviar todo",
-  "send_success_message": "Datos enviados correctamente. Su trámite ha sido registrado.",
-  "send_error_message": "Error al enviar los datos. Por favor, inténtelo de nuevo.",
-  "sending_data": "Enviando datos...",
-  "breadcrumb_home": "Inicio",
-  "file_not_found_for_validation": "Archivo no encontrado para validación.",
-  "language_selection_title": "Seleccione su Idioma"
+  "confirm_no_validation_no_button": "No, tornar",
+  "continue_without_validation_button": "Continuar sense validar",
+  "final_document_review_instructions": "Aquest és el resum de la documentació que ha estat sol·licitada i validada per al seu tràmit d'empadronament. Si us plau, adjunti i validi els documents requerits. Asseguri's que tots els documents obligatoris estiguin validats. Una vegada que tot estigui a punt, podrà passar a la pantalla final de resum.",
+  "send_all_button": "Enviar tot",
+  "send_success_message": "Dades enviades correctament. El seu tràmit ha estat registrat.",
+  "send_error_message": "Error en enviar les dades. Si us plau, torni a intentar-ho.",
+  "sending_data": "Enviant dades...",
+  "breadcrumb_home": "Inici",
+  "file_not_found_for_validation": "Arxiu no trobat per a validació.",
+  "language_selection_title": "Seleccioneu el vostre Idioma"
 }
