--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -1,47 +1,47 @@
 {
-  "app_title": "Gestión del Padrón Municipal",
-  "app_subtitle": "Guía interactiva para tu empadronamiento",
-  "loading_app": "Cargando la aplicación del Padrón...",
-  "loading_fallback_message": "Si tarda, recargue la página.",
-  "summary_title": "Resumen para Empadronamiento",
-  "summary_address_label": "Dirección:",
-  "summary_address_save_button": "Guardar",
-  "summary_address_cancel_button": "Cancelar",
-  "summary_people_label": "Personas a empadronar (extraídas de documentos de identidad validados):",
-  "summary_no_people_extracted": "No se han extraído personas de los documentos validados aún.",
-  "summary_disclaimer": "Esta información es un resumen. Deberá presentar la documentación original en el Ayuntamiento para formalizar el trámite.",
-  "question_text": "Pregunta",
-  "docs_required_title": "Documentación Requeria",
-  "file_status_valid": "Validado",
-  "file_status_invalid": "Inválido",
-  "file_status_pending": "Pendiente",
-  "file_status_uploading": "Subiendo...",
-  "file_validation_button": "Validar",
-  "file_validation_loading_button": "Validando...",
-  "file_remove_button": "Eliminar archivo",
-  "file_validation_reason": "Causa:",
-  "file_extracted_data": "Extraído:",
-  "file_read_error": "Error al leer el archivo.",
-  "ai_response_error": "No se pudo obtener una respuesta de la IA (estructura inesperada).",
-  "ai_connection_error": "Error de conexión o procesamiento con la IA:",
-  "continue_button": "Continuar",
-  "back_button": "Atrás",
-  "final_docs_review_title": "Documentación General Recopilada",
-  "final_docs_no_docs_requested": "No se han solicitado documentos en los pasos previos.",
-  "final_docs_continue_button": "Pasar a la pantalla final de resumen",
-  "alert_all_required_docs_needed": "Por favor, suba y valide todos los documentos obligatorios.",
-  "user_id_label": "ID de Usuario:",
-  "confirm_no_validation_title": "Confirmación de Continuar sin Validación",
-  "confirm_no_validation_message": "Estás seguro que quieres continuar sin toda la documentación requerida, esto puede dar lugar al rechazo del alta por falta de documentación.",
-  "confirm_no_validation_yes_button": "Sí, continuar",
-  "confirm_no_validation_no_button": "No, volver",
-  "continue_without_validation_button": "Continuar sin validar",
-  "final_document_review_instructions": "Este es el resumen de la documentación que ha sido solicitada y validada para su trámite de empadronamiento. Por favor, adjunte y valide los documentos requeridos. Asegúrese de que todos los documentos obligatorios estén validados. Una vez que todo esté listo, podrá pasar a la pantalla final de resumen.",
-  "send_all_button": "Enviar todo",
-  "send_success_message": "Datos enviados correctamente. Su trámite ha sido registrado.",
-  "send_error_message": "Error al enviar los datos. Por favor, inténtelo de nuevo.",
-  "sending_data": "Enviando datos...",
-  "breadcrumb_home": "Inicio",
-  "file_not_found_for_validation": "Archivo no encontrado para validación.",
-  "language_selection_title": "Seleccione su Idioma"
+  "app_title": "Gestion du Registre Municipal",
+  "app_subtitle": "Guide interactif pour votre enregistrement",
+  "loading_app": "Chargement de l'application du Registre...",
+  "loading_fallback_message": "Si cela prend du temps, veuillez rafraîchir la page.",
+  "summary_title": "Résumé pour l'Enregistrement",
+  "summary_address_label": "Adresse :",
+  "summary_address_save_button": "Enregistrer",
+  "summary_address_cancel_button": "Annuler",
+  "summary_people_label": "Personnes à enregistrer (extraites des documents d'identité validés) :",
+  "summary_no_people_extracted": "Aucune personne n'a encore été extraite des documents validés.",
+  "summary_disclaimer": "Ces informations sont un résumé. Vous devrez présenter les documents originaux à la mairie pour formaliser la démarche.",
+  "question_text": "Question",
+  "docs_required_title": "Documentation Requise",
+  "file_status_valid": "Validé",
+  "file_status_invalid": "Invalide",
+  "file_status_pending": "En attente",
+  "file_status_uploading": "Téléversement...",
+  "file_validation_button": "Valider",
+  "file_validation_loading_button": "Validation...",
+  "file_remove_button": "Supprimer le fichier",
+  "file_validation_reason": "Raison :",
+  "file_extracted_data": "Extrait :",
+  "file_read_error": "Erreur lors de la lecture du fichier.",
+  "ai_response_error": "Impossible d'obtenir une réponse de l'IA (structure inattendue).",
+  "ai_connection_error": "Erreur de connexion ou de traitement avec l'IA :",
+  "continue_button": "Continuer",
+  "back_button": "Retour",
+  "final_docs_review_title": "Documentation Générale Collectée",
+  "final_docs_no_docs_requested": "Aucun document n'a été demandé lors des étapes précédentes.",
+  "final_docs_continue_button": "Passer à l'écran de résumé final",
+  "alert_all_required_docs_needed": "Veuillez télécharger et valider tous les documents obligatoires.",
+  "user_id_label": "ID utilisateur :",
+  "confirm_no_validation_title": "Confirmation de Continuer sans Validation",
+  "confirm_no_validation_message": "Êtes-vous sûr de vouloir continuer sans tous les documents requis ? Cela pourrait entraîner le rejet de l'enregistrement par manque de documentation.",
+  "confirm_no_validation_yes_button": "Oui, continuer",
+  "confirm_no_validation_no_button": "Non, revenir",
+  "continue_without_validation_button": "Continuer sans valider",
+  "final_document_review_instructions": "Voici le résumé de la documentation qui a été demandée et validée pour votre démarche d'enregistrement. Veuillez joindre et valider les documents requis. Assurez-vous que tous les documents obligatoires sont validés. Une fois que tout est prêt, vous pourrez passer à l'écran de résumé final.",
+  "send_all_button": "Tout envoyer",
+  "send_success_message": "Données envoyées avec succès. Votre démarche a été enregistrée.",
+  "send_error_message": "Erreur lors de l'envoi des données. Veuillez réessayer.",
+  "sending_data": "Envoi des données...",
+  "breadcrumb_home": "Accueil",
+  "file_not_found_for_validation": "Fichier introuvable pour la validation.",
+  "language_selection_title": "Sélectionnez votre Langue"
 }
