--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -1,47 +1,47 @@
 {
-  "app_title": "Gestión del Padrón Municipal",
-  "app_subtitle": "Guía interactiva para tu empadronamiento",
-  "loading_app": "Cargando la aplicación del Padrón...",
-  "loading_fallback_message": "Si tarda, recargue la página.",
-  "summary_title": "Resumen para Empadronamiento",
-  "summary_address_label": "Dirección:",
-  "summary_address_save_button": "Guardar",
-  "summary_address_cancel_button": "Cancelar",
-  "summary_people_label": "Personas a empadronar (extraídas de documentos de identidad validados):",
-  "summary_no_people_extracted": "No se han extraído personas de los documentos validados aún.",
-  "summary_disclaimer": "Esta información es un resumen. Deberá presentar la documentación original en el Ayuntamiento para formalizar el trámite.",
-  "question_text": "Pregunta",
-  "docs_required_title": "Documentación Requeria",
-  "file_status_valid": "Validado",
-  "file_status_invalid": "Inválido",
-  "file_status_pending": "Pendiente",
-  "file_status_uploading": "Subiendo...",
-  "file_validation_button": "Validar",
-  "file_validation_loading_button": "Validando...",
-  "file_remove_button": "Eliminar archivo",
+  "app_title": "Gestione del Registro Anagrafico Comunale",
+  "app_subtitle": "Guida interattiva per la tua iscrizione anagrafica",
+  "loading_app": "Caricamento dell'applicazione del Registro Anagrafico...",
+  "loading_fallback_message": "Se l'attesa è lunga, ricarica la pagina.",
+  "summary_title": "Riepilogo per Iscrizione Anagrafica",
+  "summary_address_label": "Indirizzo:",
+  "summary_address_save_button": "Salva",
+  "summary_address_cancel_button": "Annulla",
+  "summary_people_label": "Persone da iscrivere (estratte da documenti di identità validati):",
+  "summary_no_people_extracted": "Nessuna persona è stata ancora estratta dai documenti validati.",
+  "summary_disclaimer": "Questa informazione è un riepilogo. Dovrai presentare la documentazione originale in Comune per formalizzare la pratica.",
+  "question_text": "Domanda",
+  "docs_required_title": "Documentazione Richiesta",
+  "file_status_valid": "Validato",
+  "file_status_invalid": "Non valido",
+  "file_status_pending": "In attesa",
+  "file_status_uploading": "Caricamento in corso...",
+  "file_validation_button": "Valida",
+  "file_validation_loading_button": "Validazione in corso...",
+  "file_remove_button": "Elimina file",
   "file_validation_reason": "Causa:",
-  "file_extracted_data": "Extraído:",
-  "file_read_error": "Error al leer el archivo.",
-  "ai_response_error": "No se pudo obtener una respuesta de la IA (estructura inesperada).",
-  "ai_connection_error": "Error de conexión o procesamiento con la IA:",
-  "continue_button": "Continuar",
-  "back_button": "Atrás",
-  "final_docs_review_title": "Documentación General Recopilada",
-  "final_docs_no_docs_requested": "No se han solicitado documentos en los pasos previos.",
-  "final_docs_continue_button": "Pasar a la pantalla final de resumen",
-  "alert_all_required_docs_needed": "Por favor, suba y valide todos los documentos obligatorios.",
-  "user_id_label": "ID de Usuario:",
-  "confirm_no_validation_title": "Confirmación de Continuar sin Validación",
-  "confirm_no_validation_message": "Estás seguro que quieres continuar sin toda la documentación requerida, esto puede dar lugar al rechazo del alta por falta de documentación.",
-  "confirm_no_validation_yes_button": "Sí, continuar",
-  "confirm_no_validation_no_button": "No, volver",
-  "continue_without_validation_button": "Continuar sin validar",
-  "final_document_review_instructions": "Este es el resumen de la documentación que ha sido solicitada y validada para su trámite de empadronamiento. Por favor, adjunte y valide los documentos requeridos. Asegúrese de que todos los documentos obligatorios estén validados. Una vez que todo esté listo, podrá pasar a la pantalla final de resumen.",
-  "send_all_button": "Enviar todo",
-  "send_success_message": "Datos enviados correctamente. Su trámite ha sido registrado.",
-  "send_error_message": "Error al enviar los datos. Por favor, inténtelo de nuevo.",
-  "sending_data": "Enviando datos...",
-  "breadcrumb_home": "Inicio",
-  "file_not_found_for_validation": "Archivo no encontrado para validación.",
-  "language_selection_title": "Seleccione su Idioma"
+  "file_extracted_data": "Estratto:",
+  "file_read_error": "Errore nella lettura del file.",
+  "ai_response_error": "Impossibile ottenere una risposta dall'IA (struttura inattesa).",
+  "ai_connection_error": "Errore di connessione o elaborazione con l'IA:",
+  "continue_button": "Continua",
+  "back_button": "Indietro",
+  "final_docs_review_title": "Documentazione Generale Raccolta",
+  "final_docs_no_docs_requested": "Nessun documento è stato richiesto nei passaggi precedenti.",
+  "final_docs_continue_button": "Passa alla schermata finale di riepilogo",
+  "alert_all_required_docs_needed": "Per favore, carica e valida tutti i documenti obbligatori.",
+  "user_id_label": "ID Utente:",
+  "confirm_no_validation_title": "Conferma di Continuare senza Validazione",
+  "confirm_no_validation_message": "Sei sicuro di voler continuare senza tutta la documentazione richiesta? Questo potrebbe portare al rifiuto della registrazione per mancanza di documentazione.",
+  "confirm_no_validation_yes_button": "Sì, continua",
+  "confirm_no_validation_no_button": "No, torna indietro",
+  "continue_without_validation_button": "Continua senza validare",
+  "final_document_review_instructions": "Questo è il riepilogo della documentazione che è stata richiesta e validata per la tua pratica di iscrizione anagrafica. Per favore, allega e valida i documenti richiesti. Assicurati che tutti i documenti obbligatori siano validati. Una volta che tutto sarà pronto, potrai passare alla schermata finale di riepilogo.",
+  "send_all_button": "Invia tutto",
+  "send_success_message": "Dati inviati correttamente. La tua pratica è stata registrata.",
+  "send_error_message": "Errore nell'invio dei dati. Per favore, riprova.",
+  "sending_data": "Invio dati...",
+  "breadcrumb_home": "Inizio",
+  "file_not_found_for_validation": "File non trovato per la validazione.",
+  "language_selection_title": "Seleziona la tua Lingua"
 }
