--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1,47 +1,47 @@
 {
-  "app_title": "Gestión del Padrón Municipal",
-  "app_subtitle": "Guía interactiva para tu empadronamiento",
-  "loading_app": "Cargando la aplicación del Padrón...",
-  "loading_fallback_message": "Si tarda, recargue la página.",
-  "summary_title": "Resumen para Empadronamiento",
-  "summary_address_label": "Dirección:",
-  "summary_address_save_button": "Guardar",
-  "summary_address_cancel_button": "Cancelar",
-  "summary_people_label": "Personas a empadronar (extraídas de documentos de identidad validados):",
-  "summary_no_people_extracted": "No se han extraído personas de los documentos validados aún.",
-  "summary_disclaimer": "Esta información es un resumen. Deberá presentar la documentación original en el Ayuntamiento para formalizar el trámite.",
-  "question_text": "Pregunta",
-  "docs_required_title": "Documentación Requeria",
-  "file_status_valid": "Validado",
-  "file_status_invalid": "Inválido",
-  "file_status_pending": "Pendiente",
-  "file_status_uploading": "Subiendo...",
-  "file_validation_button": "Validar",
-  "file_validation_loading_button": "Validando...",
-  "file_remove_button": "Eliminar archivo",
-  "file_validation_reason": "Causa:",
-  "file_extracted_data": "Extraído:",
-  "file_read_error": "Error al leer el archivo.",
-  "ai_response_error": "No se pudo obtener una respuesta de la IA (estructura inesperada).",
-  "ai_connection_error": "Error de conexión o procesamiento con la IA:",
-  "continue_button": "Continuar",
-  "back_button": "Atrás",
-  "final_docs_review_title": "Documentación General Recopilada",
-  "final_docs_no_docs_requested": "No se han solicitado documentos en los pasos previos.",
-  "final_docs_continue_button": "Pasar a la pantalla final de resumen",
-  "alert_all_required_docs_needed": "Por favor, suba y valide todos los documentos obligatorios.",
-  "user_id_label": "ID de Usuario:",
-  "confirm_no_validation_title": "Confirmación de Continuar sin Validación",
-  "confirm_no_validation_message": "Estás seguro que quieres continuar sin toda la documentación requerida, esto puede dar lugar al rechazo del alta por falta de documentación.",
-  "confirm_no_validation_yes_button": "Sí, continuar",
-  "confirm_no_validation_no_button": "No, volver",
-  "continue_without_validation_button": "Continuar sin validar",
-  "final_document_review_instructions": "Este es el resumen de la documentación que ha sido solicitada y validada para su trámite de empadronamiento. Por favor, adjunte y valide los documentos requeridos. Asegúrese de que todos los documentos obligatorios estén validados. Una vez que todo esté listo, podrá pasar a la pantalla final de resumen.",
-  "send_all_button": "Enviar todo",
-  "send_success_message": "Datos enviados correctamente. Su trámite ha sido registrado.",
-  "send_error_message": "Error al enviar los datos. Por favor, inténtelo de nuevo.",
-  "sending_data": "Enviando datos...",
-  "breadcrumb_home": "Inicio",
-  "file_not_found_for_validation": "Archivo no encontrado para validación.",
-  "language_selection_title": "Seleccione su Idioma"
+  "app_title": "市政登记管理",
+  "app_subtitle": "您的注册互动指南",
+  "loading_app": "正在加载市政登记应用程序...",
+  "loading_fallback_message": "如果时间太长，请刷新页面。",
+  "summary_title": "注册摘要",
+  "summary_address_label": "地址：",
+  "summary_address_save_button": "保存",
+  "summary_address_cancel_button": "取消",
+  "summary_people_label": "需要注册的人员（从已验证的身份文件中提取）：",
+  "summary_no_people_extracted": "尚未从已验证的文件中提取人员。",
+  "summary_disclaimer": "此信息为摘要。您需要向市政厅提交原始文件以正式完成手续。",
+  "question_text": "问题",
+  "docs_required_title": "所需文件",
+  "file_status_valid": "已验证",
+  "file_status_invalid": "无效",
+  "file_status_pending": "待处理",
+  "file_status_uploading": "正在上传...",
+  "file_validation_button": "验证",
+  "file_validation_loading_button": "正在验证...",
+  "file_remove_button": "删除文件",
+  "file_validation_reason": "原因：",
+  "file_extracted_data": "已提取：",
+  "file_read_error": "读取文件时出错。",
+  "ai_response_error": "无法从 AI 获取响应（意外结构）。",
+  "ai_connection_error": "与 AI 的连接或处理错误：",
+  "continue_button": "继续",
+  "back_button": "返回",
+  "final_docs_review_title": "收集的通用文件",
+  "final_docs_no_docs_requested": "之前没有要求提供文件。",
+  "final_docs_continue_button": "转到最终摘要屏幕",
+  "alert_all_required_docs_needed": "请上传并验证所有必需的文件。",
+  "user_id_label": "用户 ID：",
+  "confirm_no_validation_title": "确认继续而不验证",
+  "confirm_no_validation_message": "您确定要继续而不提供所有所需的文件吗？这可能导致因缺少文件而拒绝注册。",
+  "confirm_no_validation_yes_button": "是，继续",
+  "confirm_no_validation_no_button": "否，返回",
+  "continue_without_validation_button": "继续而不验证",
+  "final_document_review_instructions": "这是您的注册手续所需并已验证的文件摘要。请附上并验证所需文件。确保所有必需文件都已验证。一切准备就绪后，您可以转到最终摘要屏幕。",
+  "send_all_button": "全部发送",
+  "send_success_message": "数据发送成功。您的手续已注册。",
+  "send_error_message": "发送数据时出错。请重试。",
+  "sending_data": "正在发送数据...",
+  "breadcrumb_home": "主页",
+  "file_not_found_for_validation": "找不到要验证的文件。",
+  "language_selection_title": "选择您的语言"
 }
